fixed textfield spacing in forms

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -496,7 +496,12 @@
   margin-bottom: 20px;
 }
 
-.form-input {
+.form-input.text-field {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.form-input{
   width: 100%;
 }
 
